--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-version=0.2
-groovyVersion=1.7.+
+version=0.3-SNAPSHOT
+groovyVersion=[1.8,1.9)
 mavenGroupId=com.smokejumperit
 mavenArtifactId=with-log
