--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,23 @@ apply plugin:'groovy'
 apply plugin:'osgi'
 apply plugin:'maven'
 
+/*
+buildscript {
+  repositories {
+    mavenRepo urls:'http://repo.smokejumperit.com'
+    mavenCentral()
+  }
+  dependencies {
+    classpath 'com.smokejumperit:gradle-plugins:0.6.1-SNAPSHOT'
+    classpath 'org.apache.ant:ant:[1.8,1.9)'
+  }
+}
+*/
+
+
 configurations {
     deployerJars
 }
-
 
 /*
   Repo/dependencies config
@@ -31,6 +44,8 @@ dependencies {
   compile "log4j:log4j:[1.2,1.3)"
   compile "junit:junit:[4,5)"
 
+  testRuntime 'org.apache.ant:ant:[1.8,1.9)'
+
 }
 
 uploadArchives { 
@@ -53,3 +68,28 @@ uploadArchives {
 }
 
 uploadArchives.dependsOn test
+
+task taskdefGroovy << {
+  ant.taskdef(
+    name:"groovy",
+    classname: "org.codehaus.groovy.ant.Groovy"
+  )
+}
+
+task runExerciseScript(dependsOn:["jar", "taskdefGroovy"]) << {
+  ant.groovy(
+    fork:true,
+    src:new File("$rootDir/test", "ExerciseScript.groovy").canonicalPath,
+  ) {
+    ant.classpath {
+      pathelement(location:jar.archivePath.canonicalPath)
+      [configurations.testRuntime].each { config ->
+        config.resolve()
+        config.files.each { file ->
+          ant.pathelement(location:"$file")
+        }
+      }
+      ant.pathelement(path:System.properties['java.class.path'])
+    }
+  }
+}
